@@ -1,7 +1,7 @@
 <!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 <beans>
 	<bean id="manager" class="edu.mcw.rgd.pipelines.pharmgkb.Manager">
-        <property name="version" value="PharmGKB Pipeline  -- build Feb 11, 2022" />
+        <property name="version" value="PharmGKB Pipeline  -- build Sep 12, 2022" />
         <property name="dao" ref="dao" />
         <property name="preProcessor" ref="preProcessor" />
         <property name="qcProcessor" ref="qcProcessor" />
