@@ -1,3 +1,6 @@
+Sep 12, 2022
+  fixed logging of dates
+
 Feb 11, 2022
   tuned up logging
 
